out.txt
🚀 Starting event scheduler...
📅 24h reminders:    10:00 AM daily
📝 Feedback:         11:00 AM daily
💰 Payment nudges:    6:00 PM daily
🔄 Email retries:    Every 2 hours
Require error: C:\Users\aksha\OneDrive\Desktop\Team Vortex\server\routes\events.js:74
router.get('/', async (req, res) => {
^^^^^^

SyntaxError: Unexpected identifier 'router'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (C:\Users\aksha\OneDrive\Desktop\Team Vortex\server\server.js:150:21)
